# murphy_p2

./: .gitignore  LICENSE  readme.md
docker/: Dockerfile
src/: speaker_bridge.sh
src/murphy_p2/: package.xml  setup.cfg  setup.py
src/murphy_p2/launch/: bringup.launch.py
src/murphy_p2/murphy_p2/: audio_node.py  brain_node.py  cameras_node.py  ear_node.py  visual_processor_node.py
src/murphy_slam/: CMakeLists.txt  package.xml
src/murphy_slam/include/murphy_slam/: monocular_slam_node.hpp
src/murphy_slam/launch/: monocular_slam.launch.py
src/murphy_slam/src/: monocular_slam_node.cpp
src/r1_nodes/: package.xml  setup.py
src/r1_nodes/launch/: bringup.launch.py
src/r1_nodes/r1/: action_node.py  brain_node.py  cameras_node.py  visual_processor_node.py  vlm_node.py
src/r1_slam/: CMakeLists.txt  package.xml
src/r1_slam/include/r1_slam/: monocular_slam_node.hpp
src/r1_slam/launch/: monocular_slam.launch.py
src/r1_slam/src/: monocular_slam_node.cpp
